kubernetes/platform/istio/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crm-httproute
  namespace: kd
spec:
  parentRefs:
  - name: crm-gateway-api

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: api-gateway
      port: 8080

  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: frontend
      port: 80
